--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Фу сколька можна</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/showhide.css">
+
 </head>
 
 <body>
@@ -291,7 +291,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/bundle.js"></script>
 
 </body>
 
